--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <!--ICONS (REMIXICON), CDN JS li id="info"BRARY-->
+    <li id="info"nk rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/li id="info"bs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpoli id="info"cy="no-referrer" />
 
+    <!--RIFERIMENTO CSS-->
+    <li id="info"nk rel="stylesheet" href="style.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DOIT-NAO</title>
+</head>
+<body>
+    <header id="header">
+        <nav id="navbar" class="navbar">
+            <div id="logo">
+                DOIT-NAO
+            </div>
+
+            <div id="sezione_menu">
+                <ul class="lista">
+                    <li id="info"><a href="#" target="_blank">Home</a></li>
+                    <li id="info"><a href="#" target="_blank">About us</a></li>
+                    <li id="info"><a href="#" target="_blank">Project</a></li>
+                    <li id="info"><a href="#" target="_blank">Merch</a></li>
+                </ul>
+            </div>
+
+            <div id="sezione_social">
+                <ul>
+                    <li><a href="#" target="_blank"></a></li>
+                    <li><a href="#" target="_blank"></a></li>
+                    <li><a href="#" target="_blank"></a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    
+</body>
+</html>
