--- a/index.html
+++ b/index.html
@@ -25,35 +25,35 @@
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#" class="nav__link" target="_blank">
-                <i class="ri-arrow-right-up-line"></i>
+                <i class="ri-home-2-line"></i>
                 <span>Home</span>
               </a>
             </li>
 
             <li class="nav__item">
               <a href="#" class="nav__link" target="_blank">
-                <i class="ri-arrow-right-up-line"></i>
+                <i class="ri-information-2-line"></i>
                 <span>About us</span>
               </a>
             </li>
 
             <li class="nav__item">
               <a href="#" class="nav__link" target="_blank">
-                <i class="ri-arrow-right-up-line"></i>
+                <i class="ri-file-list-3-line"></i>
                 <span>Progetto</span>
               </a>
             </li>
 
             <li class="nav__item">
               <a href="#" class="nav__link" target="_blank">
-                <i class="ri-arrow-right-up-line"></i>
+                <i class="ri-search-line"></i>
                 <span>Ricerca</span>
               </a>
             </li>
 
             <li class="nav__item">
               <a href="#" class="nav__link" target="_blank">
-                <i class="ri-arrow-right-up-line"></i>
+                <i class="ri-store-2-line"></i>
                 <span>Merch</span>
               </a>
             </li>
@@ -106,7 +106,7 @@
       <div id="testi">
         <h2>DO IT NAO</h2>
         <p>
-          Uniamo l'informatica e la robotica sino all'assistenza nello sport
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur. Duis aute irure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
         </p>
       </div>
     </div>
