--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--====STYLESHEET CSS====-->
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>TPS 2024/2025</title>
+    <title>DO IT-NAO</title>
   </head>
   <body>
     <!--==== HEADER =====-->
@@ -102,13 +102,21 @@
     <script src="assets/js/navbar.js"></script>
 
     <!--PRIMO BOX CENTRALE-->
-    <div class="box_superiore">
+    <div class="box" id="box_superiore">
       <div id="testi">
         <h2>DO IT NAO</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur. Duis aute irure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
         </p>
       </div>
+      <div id="spazio_bottoni">
+        <button id="btn">PRENOTA IL ROBOT</button>
+      </div>
     </div>
+
+    <div class="box" id="box_secondo">
+
+    </div>
+
   </body>
 </html>
