Aggiunta secondo box

--- a/index.html
+++ b/index.html
@@ -114,9 +114,36 @@
       </div>
     </div>
 
+    <!--SEZIONE BOX INFO E SECONDO BOX-->
     <div class="box" id="box_secondo">
+      <!--INFORMATIONS BOX-->
 
+      <div class="info_container">
+        <span id="titolo">OBIETTIVO I</span>
+        <span id="testo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur.</span>
+        <button id="btn">ESPLORA&nbsp;<i class="ri-arrow-right-up-line"></i></button>
+      </div>
+
+      <div class="info_container">
+        <span id="titolo">OBIETTIVO II</span>
+        <span id="testo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur.</span>
+        <button id="btn">ESPLORA&nbsp;<i class="ri-arrow-right-up-line"></i></button>
+      </div>
+
+      <div class="info_container">
+        <span id="titolo">OBIETTIVO III</span>
+        <span id="testo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur.</span>
+        <button id="btn">ESPLORA&nbsp;<i class="ri-arrow-right-up-line"></i></button>
+      </div>
+
+      <div class="info_container">
+        <span id="titolo">OBIETTIVO IV</span>
+        <span id="testo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur.</span>
+        <button id="btn">ESPLORA&nbsp;<i class="ri-arrow-right-up-line"></i></button>
+      </div>
     </div>
+        
+    
 
   </body>
 </html>
