Media queries addedd

--- a/index.html
+++ b/index.html
@@ -24,35 +24,35 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link" target="_blank">
+              <a href="#" class="nav__link" target="_self">
                 <i class="ri-home-2-line"></i>
                 <span>Home</span>
               </a>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link" target="_blank">
+              <a href="#" class="nav__link" target="_self">
                 <i class="ri-information-2-line"></i>
                 <span>About us</span>
               </a>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link" target="_blank">
+              <a href="#" class="nav__link" target="_self">
                 <i class="ri-file-list-3-line"></i>
                 <span>Progetto</span>
               </a>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link" target="_blank">
+              <a href="#" class="nav__link" target="_self">
                 <i class="ri-search-line"></i>
                 <span>Ricerca</span>
               </a>
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link" target="_blank">
+              <a href="#" class="nav__link" target="_self">
                 <i class="ri-store-2-line"></i>
                 <span>Merch</span>
               </a>
