--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="box" id="box_secondo">
       <!--INFORMATIONS BOX-->
 
-      <div class="info_container">
+      <div class="info_container" id="primo">
         <span id="titolo">OBIETTIVO I</span>
         <span id="testo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur.</span>
         <button id="btn">ESPLORA&nbsp;<i class="ri-arrow-right-up-line"></i></button>
@@ -142,6 +142,54 @@
         <button id="btn">ESPLORA&nbsp;<i class="ri-arrow-right-up-line"></i></button>
       </div>
     </div>
+
+    <footer id="footer">
+      <div class="superiore">
+        <div id="logo">
+          LOGO HERE
+        </div>
+
+        <div id="colonna1">
+          INFORMAZIONI
+          <hr>
+          <ul>
+            <li>ADS</li>
+            <li>ASD</li>
+            <li>ASD</li>
+          </ul>
+        </div>
+
+        <div id="colonna2">
+          COLONNA 2
+          <hr>
+          <ul>
+            <li>AD</li>
+            <li>ASD</li>
+            <li>ASD</li>
+          </ul>
+        </div>
+
+        <div id="colonna3">
+          COLONNA 3
+          <hr>
+          <ul>
+            <li>ASD</li>
+            <li>ASD</li>
+            <li>ASD</li>
+          </ul>
+        </div>
+      </div>
+
+      <!--SEZIONE INFERIORE-->
+      <div class="inferiore">
+        <div id="parte1">
+          TUTTI I DIRITTI RISERVATI, COPYRIGHT &copy; 2025
+        </div>
+        <div id="parte2">
+          Altre informazioni
+        </div>
+      </div>
+    </footer>
         
     
 
